--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@ document.write(quote[randomquote]);
         <div class="title">
           <h2>Basic Elements</h2>
         </div>
+        <div class="alert alert-info"><a href="https://web.archive.org/web/20190105101049/http://luminousmc.com/community/index.php?login/">
+					 </a><div class="container-fluid"><a href="https://web.archive.org/web/20190105101049/http://luminousmc.com/community/index.php?login/">
+			 <div class="alert-icon">
+				<i class="material-icons">feedback</i>
+			</div>
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true"></span>
+			</button>
+							</a><center><a href="https://web.archive.org/web/20190105101049/http://luminousmc.com/community/index.php?login/">We've updated our site! Please report bugs and feedback </a><a href="https://web.archive.org/web/20190105101049/http://luminousmc.com/community"><button class="btn btn-primary btn-xs">HERE</button></a>!</center>
+					</div>
+			</div>
         <!--  buttons -->
         <div id="buttons" class="cd-section">
           <div class="title">
