--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@ document.write(quote[randomquote]);
         <div class="title">
           <h2>Basic Elements</h2>
         </div>
-        <div class="alert alert-info"><a href="https://web.archive.org/web/20190105101049/http://luminousmc.com/community/index.php?login/">
-					 </a><div class="container-fluid"><a href="https://web.archive.org/web/20190105101049/http://luminousmc.com/community/index.php?login/">
-			 <div class="alert-icon">
-				<i class="material-icons">feedback</i>
-			</div>
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-				<span aria-hidden="true"></span>
-			</button>
-							</a><center><a href="https://web.archive.org/web/20190105101049/http://luminousmc.com/community/index.php?login/">We've updated our site! Please report bugs and feedback </a><a href="https://web.archive.org/web/20190105101049/http://luminousmc.com/community"><button class="btn btn-primary btn-xs">HERE</button></a>!</center>
-					</div>
-			</div>
+        <div class="alert alert-info">
+        <div class="container">
+          <div class="alert-icon">
+            <i class="material-icons">info_outline</i>
+          </div>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true"><i class="material-icons">clear</i></span>
+          </button>
+          <b>Info alert:</b> You've got some friends nearby, stop looking at your phone and find them...
+        </div>
+      </div>
         <!--  buttons -->
         <div id="buttons" class="cd-section">
           <div class="title">
@@ -116,7 +116,6 @@ document.write(quote[randomquote]);
               <br>
               <small>Pick your style</small>
             </h3>
-          </div>
           <div class="row">
             <div class="col-md-8 ml-auto mr-auto">
               <button class="btn btn-primary">Default</button>
