--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="author"><img class="rounded-circle" src="https://cdn.discordapp.com/avatars/363680680304967681/a40ce126beed54a25a6d795426e4cabc.png?size=1024">
                         <h5 class="name">Nate JB.</h5>
-                        <p class="title">Lead Composer</p>
+                        <p class="title">Composer</p>
                     </div>
                 </div>
             </div>
