--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="box"><img class="rounded-circle" src="https://cdn.discordapp.com/avatars/193044575500238849/0fca1e5b95a945daac1880e68ef1fee0.png?size=1024">
+                    <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/SKjk56pS/ACCA2168-414-D-44-E5-899-C-4-A46073-AF89-D.jpg">
                         <h3 class="name">Tommy R.</h3>
                         <p class="title">director</p>
                         <p class="description">asdf</p>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="box"><img class="rounded-circle" src="https://cdn.discordapp.com/avatars/324494859757158403/3ff4ae986c858e88d9c27d24ea9d3631.png?size=1024">
+                    <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/wjw90WZ4/3-F3-D49-E4-F300-48-AD-8282-2962-F4-E6-ADE4.jpg">
                         <h3 class="name">Casper D.</h3>
                         <p class="title">developer</p>
                         <p class="description">asdf </p>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="box"><img class="rounded-circle" src="https://cdn.discordapp.com/avatars/363680680304967681/a40ce126beed54a25a6d795426e4cabc.png?size=1024">
+                    <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/VNTmcJYj/AAE9401-F-0-A8-A-4669-97-B8-AFD709526513.jpg">
                         <h3 class="name">Nate JB.</h3>
                         <p class="title">composer</p>
                         <p class="description">asdf </p>
