--- a/index.html
+++ b/index.html
@@ -59,14 +59,7 @@
                     <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/SKjk56pS/ACCA2168-414-D-44-E5-899-C-4-A46073-AF89-D.jpg">
                         <h3 class="name">Tommy R.</h3>
                         <p class="title">director</p>
-                        <p class="description" id="tommy">I am the bone of my code
-Node.js is my body, and C# is my blood.
-I have compiled over a thousand lines.
-Unknown to wireframes, nor known to pseudocode.
-I have withstood syntax errors.
-Yet those errors will always haunt me.
-So as I type,
-UNLIMITED PROGRAM WORKS</p>
+                        <p class="description" id="tommy">I like cake.</p>
                         <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction()"></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
                     </div>
                 </div>
@@ -81,8 +74,8 @@ UNLIMITED PROGRAM WORKS</p>
                     <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/wjw90WZ4/3-F3-D49-E4-F300-48-AD-8282-2962-F4-E6-ADE4.jpg">
                         <h3 class="name">Casper D.</h3>
                         <p class="title">developer</p>
-                        <p class="description">asdf </p>
-                        <div class="social"><a href="#"></a><a href="#"><i class="fab fa-discord"></i></a><a href="#"></a></div>
+                        <p class="description">asdf</p>
+                        <div class="social"><a href="#"></a><a><i class="fab fa-discord"></i></a><a href="#"></a></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
@@ -90,7 +83,7 @@ UNLIMITED PROGRAM WORKS</p>
                         <h3 class="name">Nate JB.</h3>
                         <p class="title">composer</p>
                         <p class="description">asdf </p>
-                        <div class="social"><a href="#"></a><a href="#"><i class="fab fa-discord"></i></a><a href="#"></a></div>
+                        <div class="social"><a href="#"></a><a><i class="fab fa-discord"></i></a><a href="#"></a></div>
                     </div>
                 </div>
             </div>
