--- a/index.html
+++ b/index.html
@@ -59,31 +59,52 @@
                     <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/SKjk56pS/ACCA2168-414-D-44-E5-899-C-4-A46073-AF89-D.jpg">
                         <h3 class="name">Tommy R.</h3>
                         <p class="title">director</p>
-                        <p class="description" id="tommy">I like cake.</p>
+                        <p class="description" id="tommy">Handles business inquiries and manages projects</p>
                         <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction()"></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
                     </div>
                 </div>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-          <script>
-          function tommyfunction(){
-            $('#tommy').css('opacity', 0);
-            setTimeout(function(){ document.getElementById("tommy").textContent = "@agent#7574";$('#tommy').css('opacity', 1);}, 450);
-          }
-          </script>
+<script src="script.js"></script>
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/wjw90WZ4/3-F3-D49-E4-F300-48-AD-8282-2962-F4-E6-ADE4.jpg">
-                        <h3 class="name">Casper D.</h3>
-                        <p class="title">developer</p>
-                        <p class="description">asdf</p>
-                        <div class="social"><a href="#"></a><a><i class="fab fa-discord"></i></a><a href="#"></a></div>
+                        <h3 class="name">Casper S.</h3>
+                        <p class="title">Game Designer</p>
+                        <p class="description" id="casper">Designs and leads the development of our game library</p>
+                        <div class="social"><a></a><a><i class="fab fa-discord" onclick="casper()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box"><img class="rounded-circle" src="https://i.postimg.cc/VNTmcJYj/AAE9401-F-0-A8-A-4669-97-B8-AFD709526513.jpg">
                         <h3 class="name">Nate JB.</h3>
                         <p class="title">composer</p>
-                        <p class="description">asdf </p>
-                        <div class="social"><a href="#"></a><a><i class="fab fa-discord"></i></a><a href="#"></a></div>
+                        <p class="description" id="nate">Composes the custom soundtracks for our projects</p>
+                        <div class="social"><a></a><a><i class="fab fa-discord" onclick="nate()"></i></a><a href="#"></a></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 item" id="tommydiv">
+                    <div class="box"><img class="rounded-circle" src="assets/img/nathan.png">
+                        <h3 class="name">Nathan P.</h3>
+                        <p class="title">lead developer</p>
+                        <p class="description" id="tommy">Manages our development team and handles high priority tasks</p>
+                        <div class="social"><a><i class="fab fa-discord" onclick="tommyfunction()"></i></a><a href="https://twitter.com/fansyboi"><i class="fa fa-twitter" href="https://twitter.com/fansyboi"></i></a><a href="https://www.mc-market.org/members/51242/"><i class="fa fa-cube"></i></a></div>
+                    </div>
+                </div>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="script.js"></script>
+                <div class="col-md-6 col-lg-4 item">
+                    <div class="box"><img class="rounded-circle" src="assets/img/default.png">
+                        <h3 class="name">Wardli</h3>
+                        <p class="title">Fullstack Developer</p>
+                        <p class="description" id="casper">Works on our software, web projects and client work</p>
+                        <div class="social"><a></a><a><i class="fab fa-discord" onclick="casper()"></i></a><a href="#"></a></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 item">
+                    <div class="box"><img class="rounded-circle" src="assets/img/default.png">
+                        <h3 class="name">Blitz</h3>
+                        <p class="title">Gameserver Developer</p>
+                        <p class="description" id="nate">Maintains and manages the development of our gameservers</p>
+                        <div class="social"><a></a><a><i class="fab fa-discord" onclick="nate()"></i></a><a href="#"></a></div>
                     </div>
                 </div>
             </div>
